Fixed alignment in landscape mode for mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -5,6 +5,7 @@ html {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: flex-start;
 }
 
 body {
